DPC-90: Initial refactoring of the Attribution Engine to support FHIR
This commit refactors the AttributionEngine interface to make use of FHIR resources.
This is probably overkill at this point, but in the future, as we need more information to make an attribution decision we have a framework for communicating.

The refactor is done, but the tests are are failing.